--- a/my-app/src/components/Cast.css
+++ b/my-app/src/components/Cast.css
@@ -14,7 +14,8 @@
     flex-wrap: wrap;
 }
 .cast-slider {
-    max-width:fit-content;
+    flex-wrap: wrap;
+    max-width:100%;
     display: flex;
     justify-content: center;
 
