--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #22254b;
+  background-color: rgb(2, 9, 31);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
