--- a/my-app/src/components/Header.css
+++ b/my-app/src/components/Header.css
@@ -1,13 +1,14 @@
 header {
     background-color: rgb(2, 9, 31);
+    color:white;
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     height: fit-content;
     position: sticky;
     top:0;
     z-index: 2;
-    opacity: 0.6;
 }
 
 .logo{
@@ -31,3 +32,46 @@ header {
 .main-page-link:hover {
   opacity: 0.5;
 }
+
+.favorite-list-link {
+    padding: 1rem;
+    height: fit-content;
+    color: #22254b;
+    background-color:white;
+    border-radius: 5px;
+    border: white solid 1px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.7s;
+    margin-right: 2rem;
+}
+.favorite-list-link-active{
+    padding: 1rem;
+    border-radius: 5px;
+    height: fit-content;
+    border: #22254b solid 1px;
+    color: white;
+    background-color:red;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.7s;
+}
+.favorite-list-link:hover {
+    transform: scale(1.1);
+}
+.favorite-list-link-active:hover {
+    transform: scale(1.1);
+}
+
+@media screen and (max-width: 320px) {
+
+.favorite-list-link {
+    margin-right: 0;
+ font-size: 10px;
+}
+.favorite-list-link-active{
+    margin-right: 0;
+    font-size: 10px;
+}
+}
+ 
