--- a/my-app/src/components/MovieInfo.css
+++ b/my-app/src/components/MovieInfo.css
@@ -1,17 +1,21 @@
 .movie_info {
     color: white;
-    background-color: rgb(2, 9, 31)
+    background-color: rgb(2, 9, 31);
+    display: flex;
+    flex-direction: column;
+
 
 }
 .poster-image {
-    margin: 50px 40px 50px 250px;
+    /* margin: 50px 40px 50px 250px; */
     max-width: 350px;
 }
 .movie-main-info {
     max-width: 100%;
     display: flex;
-    justify-content: baseline;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 .text-info {
     max-width: 800px;
@@ -35,13 +39,30 @@ h1 {
     margin-top: 0;
 }
 .rating {
-    /* position: absolute; */
+    height: fit-content;
+
+    display: flex;
+    align-items: center;
 }
 .percent {
     position: relative;
-    top: 45px;
-    left: 17px;
+    width: fit-content;
+    left: 55px;
     font-size: 20px;  
     font-weight: 500;
 }
 
+.bttn-rating {
+    margin-left: -40px;
+    display: flex;
+    width: 200px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* @media screen and (max-width: 320px) {
+    .movie-main-info {
+        flex-direction: column;
+
+    }
+} */
